// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Loader -  prop size is marked as required 1`] = `
<div
  className="loader"
  data-loader=""
/>
`;

exports[`Component: Loader -  renders a default loader with the specified size when prop size is provided 1`] = `
<div
  className="loader loader-test"
  data-loader=""
/>
`;

exports[`Component: Loader -  renders a muted loader with the specified size when prop size and muted is provided 1`] = `
<div
  className="loader loader-test loader-muted"
  data-loader=""
/>
`;
